code25_all/scala/2381666.txt
scala> val (x,y) = Tuple2("one",1)
x: java.lang.String = one
y: Int = 1

"one"
x
1
y
val (x,y) = "a b".split()

Array
Tuple2
scala> Tuple2(Array(1,2):_*)
<console>:7: error: wrong number of arguments for method apply: (T1,T2)(T1, T2)
in object Tuple2
       Tuple2(Array(1,2):_*)
       ^

scala> Tuple2(Array(1,2).toList:_*)
<console>:7: error: wrong number of arguments for method apply: (T1,T2)(T1, T2)
in object Tuple2
       Tuple2(Array(1,2).toList:_*)

